Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32206

Crash when loading lualanguageserver with all logging categories enabled

XMLWordPrintable

    • fc4f69ed4 (15.0)

      To reproduce, run Creator like this:

      QT_LOGGING_RULES=qtc.*=true qtcreator
      
      Product: Qt Creator 16.0.0-beta1 (15.0.82)
      Based on: Qt 6.5.8 (GCC 13.3.0, x86_64)
      

        For Gerrit Dashboard: QTCREATORBUG-32206
        # Subject Branch Project Status CR V

            madwinter Marcus Tillmanns
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes