Lua: Fix Crash when debug category is enabled

Not all keys / values have to be strings, but we tried
to always convert to string which results in an assert.

Fixes: QTCREATORBUG-32206
Change-Id: Ibad83383e22d2bfb68a2801c3139d7c447a8b76a
Reviewed-by: David Schulz <david.schulz@qt.io>